Tips for improve RAM usage